crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__array_port_dts.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].dts_content"
---
import type { FourStateSignalValue, ModuleDefinition } from "@celox-sim/celox";

export interface CounterPorts {
  readonly cnt: { at(i: number): bigint; readonly length: number };
  get rst(): bigint;
  set rst(value: FourStateSignalValue);
}

export declare const Counter: ModuleDefinition<CounterPorts>;
