crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__array_port_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.Counter = {
  __celox_module: true,
  name: "Counter",
  sources: [
    { path: "test.veryl", content: require("fs").readFileSync(__dirname + "/../test.veryl", "utf-8") },
  ],
  ports: {
    clk: { direction: "input", type: "clock", width: 1, is4state: true },
    cnt: { direction: "output", type: "logic", width: 32, is4state: true, arrayDims: [4] },
    rst: { direction: "input", type: "reset", width: 1, is4state: true },
  },
  events: ["clk"],
};
