crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__array_port_md.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].md_content"
---
# Counter

## Ports

| Port | Direction | Type | Width | TS Type | 4-State |
|------|-----------|------|-------|---------|--------|
| cnt | output | logic | 32 | `bigint` (readonly) | yes |
| rst | input | reset | 1 | `bigint` | yes |

## Events

| Event | Port |
|-------|------|
| clk | clk |
