crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__basic_adder_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.Adder = {
  __celox_module: true,
  name: "Adder",
  sources: [
    { path: "test.veryl", content: require("fs").readFileSync(__dirname + "/../test.veryl", "utf-8") },
  ],
  ports: {
    a: { direction: "input", type: "logic", width: 16, is4state: true },
    b: { direction: "input", type: "logic", width: 16, is4state: true },
    clk: { direction: "input", type: "clock", width: 1, is4state: true },
    rst: { direction: "input", type: "reset", width: 1, is4state: true },
    sum: { direction: "output", type: "logic", width: 17, is4state: true },
  },
  events: ["clk"],
};
