crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__bit_type_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.BitModule = {
  __celox_module: true,
  name: "BitModule",
  sources: [
    { path: "test.veryl", content: require("fs").readFileSync(__dirname + "/../test.veryl", "utf-8") },
  ],
  ports: {
    clk: { direction: "input", type: "clock", width: 1, is4state: true },
    data: { direction: "input", type: "bit", width: 8 },
    en: { direction: "input", type: "bit", width: 1 },
    result: { direction: "output", type: "bit", width: 8 },
  },
  events: ["clk"],
};
