crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__for_loop_instances_dts.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: top.dts_content
---
import type { FourStateSignalValue, ModuleDefinition } from "@celox-sim/celox";

export interface TopPorts {
  get rst(): bigint;
  set rst(value: FourStateSignalValue);
  get top_in(): bigint;
  set top_in(value: FourStateSignalValue);
  readonly top_out: { at(i: number): bigint; readonly length: number };
  readonly u_sub: ReadonlyArray<{
    get i_data(): bigint;
    set i_data(value: FourStateSignalValue);
    readonly o_data: bigint;
  }>;
}

export declare const Top: ModuleDefinition<TopPorts>;
