crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__instance_hierarchy_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: top.js_content
---
exports.Top = {
  __celox_module: true,
  name: "Top",
  sources: [
    { path: "test.veryl", content: require("fs").readFileSync(__dirname + "/../test.veryl", "utf-8") },
  ],
  ports: {
    clk: { direction: "input", type: "clock", width: 1, is4state: true },
    rst: { direction: "input", type: "reset", width: 1, is4state: true },
    top_in: { direction: "input", type: "logic", width: 8, is4state: true },
    top_out: { direction: "output", type: "logic", width: 8, is4state: true },
  },
  events: ["clk"],
};
